fix modal hover text spacing on laptops

--- a/responsive.css
+++ b/responsive.css
@@ -89,13 +89,39 @@
   }
 }
 
+@media (max-width: 1920px) {
+  .about-me-content p,
+  .about-me-2-content p,
+  .about-me-3-content p,
+  .about-me-4-content p {
+    font-size: 1em;
+    text-wrap: wrap;
+    margin: 0;
+  }
+}
+
 @media (max-width: 1280px) {
   .about-me-content p,
   .about-me-2-content p,
   .about-me-3-content p,
   .about-me-4-content p {
-    font-size: 1.8vh;
+    font-size: 0.8em;
     text-wrap: wrap;
     margin: 0;
+  }
+
+  .text-container {
+    width: 100%;
+    max-width: 100%;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .text-container p {
+    font-size: 0.7em;
+    text-wrap: nowrap;
   }
 }
