--- a/styles.css
+++ b/styles.css
@@ -389,7 +389,7 @@ h3 {
 
 .tagline2 {
   line-height: 1.1em;
-  margin-bottom: 50px;
+  margin-bottom: 4vh;
 }
 
 .about-me-2 .about-me-2-images.visible {
